--- a/index.html
+++ b/index.html
@@ -97,12 +97,18 @@
         <div class="bg-black flex w-full flex-col justify-start items-start gap-[30px] inline-flex">
             <div class="w-full h-[59px] pr-[30px] py-2 bg-stone-950 justify-end items-center gap-8 inline-flex">
                 <div class="w-10 h-5 justify-end items-center flex">
-                    <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">Github</div>
+                    <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">
+                        <a href="https://github.com/sauraodalvi" target="_blank">Github</a>
+                    </div>
                 </div>
-                <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">Portfolio</div>
+                <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">
+                    <a href="https://sauraodalvi.tech/" target="_blank">Portfolio</a>
+                    </div>
                 <div class="w-[88px] h-[43px] justify-end items-center flex">
                     <div class="px-6 py-[11px] bg-white rounded-[27px] justify-center items-center gap-2.5 inline-flex">
-                        <div class="text-black text-sm font-bold font-['Gothic A1'] leading-[21px]">LinkedIn</div>
+                        <div class="cursor-pointer text-sm font-bold font-['Gothic A1'] leading-[21px]"onclick="openInNewTab('https://www.linkedin.com/in/saurao-dalvi/');">
+                        LinkedIn
+                        </div>
                     </div>
                 </div>
             </div>
