--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bg-black w-full h-[745px] justify items-start inline-flex">
         <div class="text-white text-sm font-bold font-['Gothic A1'] leading-[21px]"><br/></div>
-        <div class="fixed left-0 bg-black h-[715px] flex-col justify-start items-start inline-flex">
+        <div class="fixed left-0 bg-black h-[715px] flex-col justify-start items-start inline-flex hidden sm:flex">
             <div class="pl-5 pr-[100px] pt-5 pb-[30px] flex-col justify-start items-start gap-2.5 flex"><img src="imgs/Vector.svg" alt=""></div>
             <div class="self-stretch h-[216px] px-5 flex-col justify-start items-start gap-[15px] flex">
                 <div class="justify-start items-center gap-[15px] inline-flex">
@@ -95,19 +95,19 @@
             </div>
         </div>
         <div class="bg-black flex w-full flex-col justify-start items-start gap-[30px] inline-flex">
-            <div class="w-full h-[59px] pr-[30px] py-2 bg-stone-950 justify-end items-center gap-8 inline-flex">
-                <div class="w-10 h-5 justify-end items-center flex">
-                    <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">
+            <div class="w-full h-16 pr-8 py-2 bg-stone-950 flex justify-end items-center gap-8">
+                <div class="w-10 h-5 flex justify-end items-center">
+                    <div class="text-neutral-400 text-sm font-bold font-'Gothic A1' leading-5">
                         <a href="https://github.com/sauraodalvi" target="_blank">Github</a>
                     </div>
                 </div>
-                <div class="text-neutral-400 text-sm font-bold font-['Gothic A1'] leading-[21px]">
+                <div class="text-neutral-400 text-sm font-bold font-'Gothic A1' leading-5">
                     <a href="https://sauraodalvi.tech/" target="_blank">Portfolio</a>
-                    </div>
-                <div class="w-[88px] h-[43px] justify-end items-center flex">
-                    <div class="px-6 py-[11px] bg-white rounded-[27px] justify-center items-center gap-2.5 inline-flex">
-                        <div class="cursor-pointer text-sm font-bold font-['Gothic A1'] leading-[21px]"onclick="openInNewTab('https://www.linkedin.com/in/saurao-dalvi/');">
-                        LinkedIn
+                </div>
+                <div class="w-24 h-12 flex justify-end items-center">
+                    <div class="px-6 py-2 bg-white rounded-full flex justify-center items-center gap-2.5">
+                        <div class="cursor-pointer text-sm font-bold font-'Gothic A1' leading-5" onclick="openInNewTab('https://www.linkedin.com/in/saurao-dalvi/');">
+                            LinkedIn
                         </div>
                     </div>
                 </div>
